--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,10 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.1"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "serialize-javascript": "^6.0.2",
+    "postcss": "^8.4.49"
   }
 }
